all field working properly

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -76,7 +76,7 @@
 
                 <div class="form-group mt-2" id="we">
                     <label for="">Work Experience</label>
-                    <textarea type="text" placeholder="Enter Here" class="form-control weField"></textarea>
+                    <textarea id="weField" type="text" placeholder="Enter Here" class="form-control"></textarea>
                 </div>
 
                 <div class="container text-center mt-2 " id="weAddbutton">
@@ -85,7 +85,7 @@
 
                 <div class="form-group mt-2" id="aq">
                     <label for="">Academic Qualifications</label>
-                    <textarea type="text" placeholder="Enter Here" class="form-control aqField"></textarea>
+                    <textarea id="aqField" type="text" placeholder="Enter Here" class="form-control"></textarea>
                 </div>
 
                 <div class="container text-center mt-2" id="aqAddbutton">
@@ -94,7 +94,7 @@
 
                 <div class="form-group mt-2" id="sk">
                     <label for="">Skills</label>
-                    <textarea type="text" placeholder="Enter Here" class="form-control skField"></textarea>
+                    <textarea id="skField" type="text" placeholder="Enter Here" class="form-control"></textarea>
                 </div>
 
                 <div class="container text-center mt-2" id="skAddbutton">
