--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,10 +9,10 @@
     <title>ResumeBuilder</title>
 </head> 
 <body>
-    <div class="background">
+    <div >
         <nav class="navbar">
-            <div class="logo"><a href="/HTML/index.html"><img src="/Images/logo.jpg" alt="logo"></a></div>
             <ul class="navlist">
+                <li> <a href="/HTML/index.html"><img src="/Images/logo.jpg" alt="logo" style="width: 100px;"></a></li>
                 <li><a href="/HTML/index.html"><img src="https://img.icons8.com/android/20/000000/home.png"/>Home</a></li>
                 <li><a href="/HTML/AboutUs.html"><img src="https://img.icons8.com/android/20/000000/myspace.png"/>About Us</a></li>
                 <li><a href="/HTML/CreateResume.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/document--v1.png"/>Create Resume</a></li>
