color added to homepage and create resume

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/CSS/CreateResume.css">
     <title>ResumeBuilder</title>
 </head>
-<body>
-    <div >
+<body style="background-color: aquamarine;">
+    <div style="background-color: white;">
         <nav class="navbar">
             <ul class="navlist">
                 <li> <a href="/HTML/index.html"><img src="/Images/logo.jpg" alt="logo" style="width: 100px;"></a></li>
