--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,31 +8,32 @@
     <link rel="stylesheet" href="/CSS/style.css">
     <title>ResumeBuilder</title>
 </head> 
-<body>
-    <div >
-        <nav class="navbar">
-            <ul class="navlist">
-                <li> <a href="/HTML/index.html"><img src="/Images/logo.jpg" alt="logo" style="width: 100px;"></a></li>
-                <li><a href="/HTML/index.html"><img src="https://img.icons8.com/android/20/000000/home.png"/>Home</a></li>
-                <li><a href="/HTML/AboutUs.html"><img src="https://img.icons8.com/android/20/000000/myspace.png"/>About Us</a></li>
-                <li><a href="/HTML/CreateResume.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/document--v1.png"/>Create Resume</a></li>
-                <li><a href="/HTML/login.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/user-male.png"/>SignUp/Login</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="content">
-        <div class="first-content">
-            <img src="/Images/resume-image.png" alt="template">
-            <div class="content2">
-                <h1>CREATE RESUME IN ONE CLICK</h1>
-                <div class="content3">
+    <body style="background-color: aquamarine;">
+        <div style="background-color: white;">
+            <nav class="navbar">
+                <ul class="navlist">
+                    <li> <a href="/HTML/index.html"><img src="/Images/logo.jpg" alt="logo" style="width: 100px;"></a></li>
+                    <li><a href="/HTML/index.html"><img src="https://img.icons8.com/android/20/000000/home.png"/>Home</a></li>
+                    <li><a href="/HTML/AboutUs.html"><img src="https://img.icons8.com/android/20/000000/myspace.png"/>About Us</a></li>
+                    <li><a href="/HTML/CreateResume.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/document--v1.png"/>Create Resume</a></li>
+                    <li><a href="/HTML/login.html"><img src="https://img.icons8.com/ios-glyphs/20/000000/user-male.png"/>SignUp/Login</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="content">
+            <div class="first-content">
+                <img src="/Images/resume-image.png" alt="template">
+                <div class="content2">
+                    <h1 style="font-family: unset; color: red;">CREATE RESUME IN ONE CLICK</h1>
+                <!-- <div class="content3">
                     <img src="/Images/tick-icon.jpg"><h6>Our online resume creator lets you build a powerful resume from scratch.<h6>
                     <img src="/Images/tick-icon.jpg"><h6>Our online resume creator lets you build a powerful resume from scratch.<h6>
                     <img src="/Images/tick-icon.jpg"><h6>Our online resume creator lets you build a powerful resume from scratch.<h6>
                     <img src="/Images/tick-icon.jpg"><h6>Our online resume creator lets you build a powerful resume from scratch.<h6>
+                </div> -->
+                    <a href="/HTML/CreateResume.html"><button class="create-btn">CREATE RESUME</button></a>
                 </div>
-                <a href="/HTML/CreateResume.html"><button class="create-btn">CREATE RESUME</button></a>
             </div>
         </div>
-</body>
+    </body>
 </html>
