--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -111,7 +111,7 @@
     </div>
     
     <!--cv-template-->
-    <div class="container" id="cv-template">
+    <div class="container" id="cv-template" style="background-color: white; border: black; border-style: solid;">
 
         <div class="row">
             <div class="col-md-4 text-center py-5 background">
@@ -129,7 +129,7 @@
                 </div>
             </div>
 
-            <div class="col-md-8 py-5">
+            <div class="col-md-8 py-5" >
                 <!--second column-->
                 <h1 id="nameT2" class="text-center" style="font-weight: 980">Rahul Saxena</h1>
                 
