profie picture section uploaded

--- a/HTML/CreateResume.html
+++ b/HTML/CreateResume.html
@@ -50,6 +50,14 @@
                     <textarea type="text" id="addressField" placeholder="Enter Here" class="form-control"></textarea>
                 </div>
 
+                <div class="form-group mt-3">
+                    <label for="">Select Your Photo</label>
+
+                    <input id="imgField" type="file" class="form-control">
+
+                </div>
+
+
                 <p class="text-secondary my-3">Important Links</p>
 
                 <div class="form-group mt-2">
@@ -116,7 +124,7 @@
         <div class="row">
             <div class="col-md-4 text-center py-5 background">
                 <!--first column-->
-                <img src="/Images/defaultProfilePicture.jpg" alt="" class="img-fluid my-img">
+                <img src="/Images/defaultProfilePicture.jpg" alt="" class="img-fluid my-img" id="imgTemplate">
 
                 <div class="container">
                     <p id="nameT1">Rahul Saxena</p>
